--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,21 @@
   "manifest_version": 2, 
   "browser_action": { 
     "default_popup": "index.html", 
-    "default_title": "Open the popup" }, 
-  
-  "permissions": []
+    "default_title": "Open the popup"
+   }, 
+  "background": {
+      "scripts": ["background.js"],
+      "persistent": true
+    },
+  "permissions": [
+    "background",
+      "tabs",
+      "<all_urls>"
+    ],
+  "content_scripts": [
+      {
+        "matches": ["*://*/*"],
+        "js": ["content.js"]
+      }
+    ]
 }
