--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "axios": "^0.21.1",
     "copy-webpack-plugin": "^6.4.1",
     "customize-cra": "^1.0.0",
+    "react": "^17.0.2",
     "react-app-rewire-multiple-entry": "^2.2.1",
     "react-app-rewired": "^2.1.8",
-    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
