--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,8 @@
     ],
   "content_scripts": [
       {
-        "matches": ["*://*/*"],
+        
+        "matches": ["https://www.acmicpc.net/problem/*"],
         "js": ["content.js"]
       }
     ]
